condensing and editing introduction and detector section. --Lindley

--- a/SphericalHarmonicsPaper/NIMA/10-Introduction.tex
+++ b/SphericalHarmonicsPaper/NIMA/10-Introduction.tex
@@ -19,93 +19,109 @@ could point to an underlying symmetry of the Universe.  Presently, the
 most promising technique for answering these questions is the search
 for Neutrinoless Double-Beta (0\nbb) decay \cite{Furry1939}. In this
 decay, a nucleus undergoes a second order $\beta$-decay without
-producing any neutrinos, $(Z,A)\rightarrow(Z+2,A)+2\beta^-$. 
+producing any neutrinos, $(Z,A)\rightarrow(Z+2,A)+2\beta^-$.  This is in comparison to two neutrino double beta (2{\nbb}) decay
+\cite{GoeppertMayer1935}, the Standard Model allowed second order
+\bmd-decay channel where lepton number is conserved by the
+production of two anti-neutrinos, \mbox{$(Z,A)\rightarrow(Z,A+2)+2\beta+2\bar\nu_e$}.
 
-Recently, this search has generated a significant amount of
-experimental interest, with the largest on-going experiments searching
-for {0\nbb} decay of $^{76}$Ge \cite{GERDA2013}, $^{130}$Te
-\cite{CUORE2015,CUORE2016} and $^{136}$Xe
-\cite{EXO2014,KamLANDZen2013}. At present, 0{\nbb} decay has never
-been convincingly observed, but present limits indicate that the
-half-lives are longer than $10^{23}-10^{25}\,\mathrm{yr}$ in the
-isotopes studied. The standard mechanism of 0{\nbb} decay is
-parameterized by the \emph{effective Majorana mass}, defined as
-\mbox{$m_{\beta\beta}\equiv\left|\sum_i U^2_{ei}m_i\right|$}, where
-$U_{ei}$ are the elements of the PMNS matrix and $m_i$ are the
-neutrino masses. Current half-life limits translate to a limit on
-\mbox{$m_{\beta\beta}\lesssim 150-700\,\mathrm{meV}$}. The majority of
-the spread on this bound comes from theoretical uncertainty in the
-nuclear modeling (see \cite{Vogel2012} for a review). The next
-generation of 0{\nbb} decay experiments seek to be sensitive enough to
-detect or rule out 0{\nbb} decay down to \mbox{$m_{\beta\beta}\lesssim
-  10$~meV}. This will require a detector to instrument roughly a ton
-of active isotope, maintain a good energy resolution, and achieve a
-near zero background in the region of interest (ROI) over the course
-of the experiment \cite{Cremonesi2013} [Second CITATION?].
+%This is a detector paper so I don't think we need this detail.
+%Recently, this search has generated a significant amount of
+%experimental interest, with the largest on-going experiments searching
+%for {0\nbb} decay of $^{76}$Ge \cite{GERDA2013}, $^{130}$Te
+%\cite{CUORE2015,CUORE2016} and $^{136}$Xe
+%\cite{EXO2014,KamLANDZen2013}. At present, 0{\nbb} decay has never
+%been convincingly observed, but present limits indicate that the
+%half-lives are longer than $10^{23}-10^{25}\,\mathrm{yr}$ in the
+%isotopes studied. The standard mechanism of 0{\nbb} decay is
+%parameterized by the \emph{effective Majorana mass}, defined as
+%\mbox{$m_{\beta\beta}\equiv\left|\sum_i U^2_{ei}m_i\right|$}, where
+%$U_{ei}$ are the elements of the PMNS matrix and $m_i$ are the
+%neutrino masses. Current half-life limits translate to a limit on
+%\mbox{$m_{\beta\beta}\lesssim 150-700\,\mathrm{meV}$}. The majority of
+%the spread on this bound comes from theoretical uncertainty in the
+%nuclear modeling (see \cite{Vogel2012} for a review). The next
+%generation of 0{\nbb} decay experiments seek to be sensitive enough to
+%detect or rule out 0{\nbb} decay down to \mbox{$m_{\beta\beta}\lesssim
+%10$~meV}. This will require a detector to instrument roughly a ton
+%of active isotope, maintain a good energy resolution, and achieve a
+%near zero background in the region of interest (ROI) over the course
+%of the experiment. % No citation needed I think, \cite{Cremonesi2013}.
 
-Over the past few years, liquid scintillator-based detectors have
-proven to be a competitive technology in this search
-[CITATION?]. Their primary advantage is their ease of scalability to
-larger instrumented masses, which involves disolving larger amounts of
+Liquid scintillator-based detectors have
+proven to be a competitive technology in this search\cite{KamLANDZen2013}. Their primary advantage is their ease of scalability to
+larger instrumented masses, which involves dissolving larger amounts of
 the isotope of interest into the liquid scintillator (LS). This
 feature can allow for rapid scaling to 1~ton or more using the
 detectors already in operation \cite{Biller2013}. In a large LS
 detector, most backgrounds can be strongly suppressed through a
-combination of filtration of the LS to remove internal contaminents,
-self-shielding to minimize the effects of external contaminents, and
-vetoing to reduce cosmic ray effects. The backgrounds relevant to
+combination of filtration of the LS to remove internal contaminants,
+self-shielding to minimize the effects of external contaminants, and
+vetoes to reduce muon spallation backgrounds. The backgrounds relevant to
 0{\nbb} decay which cannot be reduced through these means are the
-2{\nbb} decay and electron scattering of $^8$B solar neutrinos.
+2{\nbb} decay, electron scattering of $^8$B solar neutrinos and at more shallow depths long-lived spallation products especially $^{10}$C$(\tau=xx, Q=XX)$.
 
-Since 0{\nbb} decay produces no neutrinos, the full energy of the
-decay is contained within the detector and the observed spectrum of
-this decay is a peak around the decay $Q$-value. Most of this energy
-is carried by the electrons which have typical kinetic energies of
-$\sim1-2\,\mathrm{MeV}$ each. Two neutrino double beta (2{\nbb}) decay
-\cite{GoeppertMayer1935} is the Standard Model allowed second order
-$\beta$-decay channel where lepton number is conserved by the
-production of two anti-neutrinos,
-\mbox{$(Z,A)\rightarrow(Z,A+2)+2\beta+2\bar\nu_e$}. Since the kinetic
-energy of the neutrinos is practically never detected, the energy
-spectrum measured from 2{\nbb} decay is broadened from 0~MeV up to the
-decay $Q$-value. Because it is intrinsic to the target isotope, the
-high energy tail of the 2{\nbb} spectrum forms an irreducible
-background to the 0{\nbb} signal. The only way to distinguish the two
-is through a shape analysis of the resulting decay spectrum. This
-requires a detector with a good energy resolution (see
-Fig.~\ref{fig:SNOp_bkgs}). Present LS-based detectors achieve typical
-energy resolutions of \mbox{$\sigma(E)\sim 5\%/\sqrt{E(\rm
-    MeV)}$}. The next generation of detectors will seek to improve
-upon this by increasing both the photo-covering of the detector and
-light yield of the LS. \JOcom{Eventually this will fold back in the
-  question of slowing down the scintillation signal and improving the
-  Cherenkov signal at the cost of decreasing the total light yield.}
+\begin{figure}[ht]
+\centering
+\includegraphics[width=0.49\columnwidth]{spectrum_plot_200_stack_nosums_nodata_inset_200mev.pdf}
+\includegraphics[width=0.49\columnwidth]{C10DecayScheme.pdf}
+\caption{ Plot taken from~\cite{SNOp_paper}}
+\label{fig:EdisAnd10C}
+\end{figure}
+
+
+The 0{\nbb} signal and these backgrounds have distinctive energy spectra. Since 0{\nbb} decay produces no neutrinos, the full energy of the
+decay is contained within the detector and a peak is observed around the decay $Q$-value. This defines a clear region of interest (ROI) around the $Q$-value.  Fig.~\ref{fig:EdisAnd10C} (Left) illustrates this for the \nbb decay of XX. In 2{\nbb} decay, the neutrinos carry away some fraction of the decay energy leading to a broad spectrum from 0~MeV up to the decay $Q$-value. The interaction of \B solar neutrinos through neutrino-electron elastic scatter (ES) produces produces a spectrum that rises at low energies, producing an effectively flat background in the ROI. Finally, the \bpd-decay of $^{10}$C proceeds through a long lived excited state of \bten,  see Fig.~\ref{fig:EdisAnd10C} (Right). In a liquid scintillator detector, the full energy of the decay, positron kinetic energy, annihilation gammas, and de-excitation gammas, is detected. This results in a \bmd-decay spectrum offset from zero by the energy of the XX~MeV excited state.
+
+A detector with good energy resolution can statistically separate these backgrounds from the 0\nbb signal. Additional background rejection is possible with the inclusion of directional or topographical information. The two electrons emitted in 0\nbb and 2\nbb should reconstruct very differently than the single electron from ES or the positron and subsequent  gammas from the \C decay. In previous work, we have shown that photo-detectors with timing resolution of $\sim$100~ps can be used to resolve the prompt Cherenkov photons from the slower scintillation signal and the resulting distributions can be fit for the position and direction of $\sim$MeV electrons\cite{Aberle2014}. 
+
+In this paper, we examine in detail the time and topographical distributions of 0\nbb and these two key backgrounds. We propose a method using spherical harmonic decomposition to analyze the distribution of early photo-electrons (PE) and use this as a discriminant. In Section~\ref{sec:detector_description}, we describe the detector model we will use throughout this paper. In Section~\ref{sec:spherical_harmonics}, we introduce the spherical harmonic decomposition, and discuss the performance of this analysis in Section~\ref{sec:performance_and_challenges}.
+
+
+
+%Since 0{\nbb} decay produces no neutrinos, the full energy of the
+%decay is contained within the detector and the observed spectrum of
+%this decay is a peak around the decay $Q$-value. Most of this energy
+%is carried by the electrons which have typical kinetic energies of
+%$\sim1-2\,\mathrm{MeV}$ each. Two neutrino double beta (2{\nbb}) decay
+%\cite{GoeppertMayer1935} is the Standard Model allowed second order
+%$\beta$-decay channel where lepton number is conserved by the
+%production of two anti-neutrinos,
+%\mbox{$(Z,A)\rightarrow(Z,A+2)+2\beta+2\bar\nu_e$}. Since the kinetic
+%energy of the neutrinos is practically never detected, the energy
+%spectrum measured from 2{\nbb} decay is broadened from 0~MeV up to the
+%decay $Q$-value. Because it is intrinsic to the target isotope, the
+%high energy tail of the 2{\nbb} spectrum forms an irreducible
+%background to the 0{\nbb} signal. The only way to distinguish the two
+%is through a shape analysis of the resulting decay spectrum. This
+%requires a detector with a good energy resolution (see
+%Fig.~\ref{fig:SNOp_bkgs}). Present LS-based detectors achieve typical
+%energy resolutions of \mbox{$\sigma(E)\sim 5\%/\sqrt{E(\rm
+%    MeV)}$}. The next generation of detectors will seek to improve
+%upon this by increasing both the photo-covering of the detector and
+%light yield of the LS. \JOcom{Eventually this will fold back in the
+%  question of slowing down the scintillation signal and improving the
+%  Cherenkov signal at the cost of decreasing the total light yield.}
   
-The spectrum of ES interactions of $^{8}$B solar neutrinos falls
-slowly over the range $2-3\,\mathrm{MeV}$, creating a nearly flat
-background across the ROI and reducing the sensitivity to 0{\nbb}. In
-this energy region, these interactions produce only a single
-$\sim$2.5~MeV electron, rather than two $\sim$1.2~MeV electrons as in
-0{\nbb}. In a LS, this difference in event topology manifests as two
-distinct distributions of Cherenkov photons, and thus creates a way to
-tag and remove these $^{8}$B solar neutrino events. As we have shown
-in previous works, photo-detectors with timing resolution of
-$\sim$100~ps can resolve the prompt Cherenkov photons from the slower
-scintillation signal \cite{Aberle2014}. The challenge is that for a
-given event, we expect $\sim$100 Cherenkov photons with which to
-reconstruct the event topology. \JOcom{It would be good to say
-  something like: In a SNO/KamLAND sized detector, we expect $\sim$50
-  $^{8}$B events, so our rejection needs to be at least this good. But
-  perhaps we say that later?}
+%The spectrum of ES interactions of $^{8}$B solar neutrinos falls
+%slowly over the range $2-3\,\mathrm{MeV}$, creating a nearly flat
+%background across the ROI and reducing the sensitivity to 0{\nbb}. In
+%this energy region, these interactions produce only a single
+%$\sim$2.5~MeV electron, rather than two $\sim$1.2~MeV electrons as in
+%0{\nbb}. In a LS, this difference in event topology manifests as two
+%distinct distributions of Cherenkov photons, and thus creates a way to
+%tag and remove these $^{8}$B solar neutrino events. As we have shown
+%in previous works, photo-detectors with timing resolution of
+%$\sim$100~ps can resolve the prompt Cherenkov photons from the slower
+%scintillation signal \cite{Aberle2014}. The challenge is that for a
+%given event, we expect $\sim$100 Cherenkov photons with which to
+%reconstruct the event topology. \JOcom{It would be good to say
+%something like: In a SNO/KamLAND sized detector, we expect $\sim$50
+%  $^{8}$B events, so our rejection needs to be at least this good. But
+%  perhaps we say that later?}
 
-In this paper, we propose to use a spherical harmonic decomposition
-to analyze the distribution of early photo-electrons (PE) to
-discriminate between $^{8}$B solar neutrinos and 0{\nbb} decay
-events. In Section~\ref{sec:detector_description}, we describe the
-detector model we will use throughout this paper. In
-Section~\ref{sec:spherical_harmonics}, we introduce the spherical
-harmonic decomposition, and discuss the performance of this analysis
-in Section~\ref{sec:performance_and_challenges}.
+
+
+
 
 
 
