--- a/SphericalHarmonicsPaper/NIMA/common_commands.tex
+++ b/SphericalHarmonicsPaper/NIMA/common_commands.tex
@@ -3,10 +3,14 @@
 
 \newcommand\JOcom[1]{{\textcolor{red}{#1}}}
 
+\newcommand{\bmd}{\beta}
+\newcommand{\bpd}{\beta^{+}}
+\newcommand{\bb}{\beta\beta}
 \newcommand{\vbb}{0\nu\beta\beta}
 \newcommand{\vvbb}{2\nu\beta\beta}
-\newcommand{\Te}{^{130}Te}
-\newcommand{\Se}{^{82}Se}
-\newcommand{\B}{^{8}B}
-\newcommand{\Bten}{^{10}B}
-\newcommand{\Cten}{^{10}C}
+\newcommand{\Te}{$^{130}$Te}
+\newcommand{\Se}{$^{82}$Se}
+\newcommand{\B}{$^{8}$B}
+\newcommand{\Bten}{$^{10}$B}
+\newcommand{\Cten}{$^{10}$C}
+\newcommand{\C}{$^{10}$C}
