--- a/SphericalHarmonicsPaper/NIMA/spherical_paper.tex
+++ b/SphericalHarmonicsPaper/NIMA/spherical_paper.tex
@@ -29,54 +29,22 @@
 
 \input{10-Introduction}
 
-\begin{figure}[ht]
-  \centering
-  \includegraphics[width=0.75\columnwidth]{SNOp_backgrounds.JPG}
-  \caption{SNO+ Phase I signal and background energy spectrum (visible
-    kinetic energy reconstructed under a 0{\nbb} hypothesis). Plot                                                                                                                   
-    taken from~\cite{SNOp_paper}}
-  \label{fig:SNOp_bkgs}
-\end{figure}
-
-
-
-\begin{figure}[ht]
-  \centering
-  \includegraphics[width=0.49\columnwidth]{Combined-0nu-R135cm.pdf}
-  \includegraphics[width=0.49\columnwidth]{spectrum_plot_200_stack_nosums_nodata_inset_200mev.pdf}
-   \caption{ Plot taken from~\cite{SNOp_paper}}
-  \label{fig:SNOp_and_KamLAND_bkgs}
-\end{figure}
-
-\begin{figure*}[ht]
-  \centering
-  \includegraphics[width=0.49\textwidth]{hCos_Te130.pdf}
-  \includegraphics[width=0.49\textwidth]{hE1toQ_Te130.pdf}
-  \caption{Comparison between kinematics of 0{\nbb} (\emph{dashed red
-      lines}) and 2{\nbb} decays (\emph{solid black lines}) for events
-    with the total kinetic energy of the electrons above 90\% of the
-    Q-value. \emph{Left:} Cosine of the angle between two
-    electrons. \emph{Right:} Fraction of energy carried by one of the
-    two electrons. Due to limited statistic around the energy spectrum
-    end point for 2{\nbb} decay we show statistical errors for each
-    bin.}
-  \label{fig:Kinematics}
-\end{figure*}
-%26976
-
-\input{20-LiquidScintillatorDetector}
+%\input{20-LiquidScintillatorDetector}
+\clearpage %These are only needed to force correct placement of the
+           %figures while there is no text
+%\input{25-EventTiming}
 \clearpage %These are only needed to force correct placement of the
            %figures while there is no text
 
-\input{30-SphericalHarmonics}
+%\input{30-SphericalHarmonics}
 \clearpage %These are only needed to force correct placement of the
            %figures while there is no text
 
-\input{40-Performance}
+%\input{40-Performance}
 \clearpage %These are only needed to force correct placement of the
            %figures while there is no text
 
-\input{50-Conclusions}
+%\input{50-Conclusions}
 \clearpage %These are only needed to force correct placement of the
            %figures while there is no text
 
@@ -85,11 +53,11 @@
 
 \bibliography{bibliography}
 
-\appendix
+%\appendix
 % The following line is a hack for elsevier to get the appendix and
 % the table of contents to play well together.
-\renewcommand*{\thesection}{\Alph{section}}
-\input{60-Appendix}
+%\renewcommand*{\thesection}{\Alph{section}}
+%\input{60-Appendix}
 
 
 \end{document}
